syntax = "proto3";

package feedpb;

import "google/protobuf/empty.proto";

option go_package = ".;feedpb";

service Subscription {
  rpc Subscribe(SubscribeRequest) returns (google.protobuf.Empty);
  rpc Unsubscribe(UnsubscribeRequest) returns (google.protobuf.Empty);
}

message SubscribeRequest {
  string dao_id = 2;
}

message UnsubscribeRequest {
  string dao_id = 2;
}
